# IC-Vibe-Coding-Template-Rust

./: CHANGELOG.md  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
.ai-ingest/: MULTI_PRINCIPAL_TESTING.md
.github/instructions/: frontend-test.instructions.md
.github/prompts/: add-backend-feature.prompt.md  add-frontend-feature.prompt.md
src/ai_optimizer/: Cargo.toml  ai_optimizer.did
src/ai_optimizer/src/: lib.rs
src/backend/: Cargo.toml
src/backend/src/: lib.rs
src/blockchain_verifier/src/: lib.rs
src/complaint_handler/: Cargo.toml  complaint_handler.did
src/complaint_handler/src/: lib.rs
src/dao_manager/: Cargo.toml  dao_manager.did
src/dao_manager/src/: lib.rs
src/frontend/: index.html  main.tsx  package.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: Header.tsx  index.ts
src/frontend/src/hooks/: index.ts  useAuth.ts  useBackendActors.ts
src/frontend/src/services/: backendService.ts  index.ts
src/frontend/src/views/: CounterView.tsx  GreetingView.tsx  LlmPromptView.tsx
src/frontend/tests/: App.authentication.test.tsx  App.test.tsx
src/frontend/tests/hooks/: useAuth.test.tsx
src/frontend/tests/services/: backendService.test.ts
src/frontend/tests/views/: CounterView.test.tsx  GreetingView.test.tsx  LlmPromptView.test.tsx
src/fund_tracker/: Cargo.toml  fund_tracker.did
src/fund_tracker/src/: lib.rs
src/india_hub/src/: lib.rs
src/smart_policy/: Cargo.toml  smart_policy.did
src/smart_policy/src/: lib.rs
tests/src/: backend.test.ts
