[package]
name = "ai_optimizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.13.0"
ic-cdk-timers = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Blockchain and Crypto
secp256k1 = "0.28"
ed25519-dalek = "2.0"
sha3 = "0.10"
blake3 = "1.0"

# AI and ML
rust-bert = "0.21"
tokenizers = "0.15"
ndarray = "0.15"

# Database and Storage
sled = "0.34"
rocksdb = "0.21"

# Networking
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

# Time and Date
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
